# fbauth

./: .pdm.toml  .pylintrc  README.md  pyproject.toml
src/fbauth/: commands.py  database.py  extension.py  forms.py  middleware.py  permissions.py  router.py  types.py
src/fbauth/actions/: __init__.py  app.py  model.py  users.py
src/fbauth/actions/security/: __init__.py  hashing.py  token.py
src/fbauth/graphql/: __init__.py  accounts.py  operations.py  role.py  roles.py  user.py
src/fbauth/manager/: __init__.py  role.py  user.py
src/fbauth/migrations/: README.md  importer.py
src/fbauth/security/: __init__.py  config.py  hashing.py  tokens.py
src/fbauth/testing/: client.graphql
